--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "tego-lang"
 version = "0.2.1"
-authors = ["Brendon Bown <bhbochikens@gmail.com>"]
+authors = ["Brendon Bown <brendon.bown@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
