--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tego-lang"
+name = "tego"
 version = "0.4.0"
 authors = ["Brendon Bown <brendon.bown@gmail.com>"]
 edition = "2018"
