--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 nom = "5.0.0"
 structopt = "0.3.14"
+owned_chars = "0.3.1"
 
 [dev-dependencies]
 tempfile = "3.1.0"
